#2647 fix failing IT tests - 1st round (#2651)
(cherry picked from commit 732d083c3c4693ce82a70815d25299d43895f3be)